--- a/definition/package.json
+++ b/definition/package.json
@@ -8,6 +8,7 @@
     "node_modules"
   ],
   "dependencies": {
+    "@angular/animations": "5.2.0",
     "@angular/common": "5.2.0",
     "@angular/compiler": "5.2.0",
     "@angular/core": "5.2.0",
@@ -17,31 +18,34 @@
     "@angular/router": "5.2.0",
     "@ng-bootstrap/ng-bootstrap": "1.0.0-beta.9",
     "bootstrap": "4.0.0",
+    "chart.js": "2.7.1",
     "core-js": "2.4.1",
     "font-awesome": "4.7.0",
-    "jquery": "3.2.1",
+    "fullcalendar": "3.8.2",
+    "jquery": "^3.2.1",
+    "jquery-ui": "^1.12.1",
+    "jquery-ui-dist": "^1.12.1",
+    "moment": "2.20.1",
     "ng-jhipster": "0.4.0",
     "ngx-cookie": "2.0.1",
     "ngx-infinite-scroll": "0.5.1",
     "ngx-webstorage": "2.0.1",
+    "pivottable": "^2.19.0",
+    "primeng": "5.2.0",
+    "primeng-extensions": "0.0.41",
+    "quill": "1.3.5",
     "reflect-metadata": "0.1.10",
     "rxjs": "5.5.6",
     "swagger-ui": "2.2.10",
     "tether": "1.4.0",
-    "zone.js": "0.8.19",
-    "@angular/animations": "5.2.0",
-    "primeng": "5.2.0",
-    "primeng-extensions": "0.0.41",
-    "chart.js": "2.7.1",
-    "moment": "2.20.1",
-    "fullcalendar": "3.8.2",
-    "quill": "1.3.5"
+    "zone.js": "0.8.19"
   },
   "devDependencies": {
     "@angular/cli": "1.6.6",
     "@angular/compiler-cli": "5.2.0",
     "@ngtools/webpack": "1.8.5",
     "@types/jasmine": "2.5.53",
+    "@types/jquery": "^3.3.0",
     "@types/node": "8.0.18",
     "angular2-template-loader": "0.6.2",
     "awesome-typescript-loader": "3.2.2",
@@ -68,9 +72,12 @@
     "karma-remap-istanbul": "0.6.0",
     "karma-sourcemap-loader": "0.3.7",
     "karma-webpack": "2.0.4",
+    "node-sass": "4.5.3",
     "phantomjs-prebuilt": "2.1.16",
+    "postcss-loader": "2.0.9",
     "proxy-middleware": "0.15.0",
     "rimraf": "2.6.1",
+    "sass-loader": "6.0.6",
     "source-map": "0.6.1",
     "sourcemap-istanbul-instrumenter-loader": "0.2.0",
     "style-loader": "0.18.2",
@@ -78,19 +85,16 @@
     "tslint": "5.5.0",
     "tslint-loader": "3.5.3",
     "typescript": "2.6.2",
-    "sass-loader": "6.0.6",
-    "node-sass": "4.5.3",
-    "postcss-loader": "2.0.9",
-    "xml2js": "0.4.17",
     "uglifyjs-webpack-plugin": "1.1.5",
+    "web-app-manifest-loader": "0.1.1",
     "webpack": "3.10.0",
     "webpack-dev-server": "2.9.5",
     "webpack-merge": "4.1.1",
     "webpack-notifier": "1.5.1",
     "webpack-visualizer-plugin": "0.1.11",
-    "web-app-manifest-loader": "0.1.1",
     "workbox-webpack-plugin": "3.0.0-alpha.3",
-    "write-file-webpack-plugin": "4.1.0"
+    "write-file-webpack-plugin": "4.1.0",
+    "xml2js": "0.4.17"
   },
   "engines": {
     "node": ">=6.9.0"
