--- a/definition/src/main/resources/config/application-dev.yml
+++ b/definition/src/main/resources/config/application-dev.yml
@@ -32,9 +32,9 @@ spring:
         serialization.indent_output: true
     datasource:
         type: com.zaxxer.hikari.HikariDataSource
-        url: jdbc:postgresql://localhost:5432/fin1
-        username: fin1
-        password: fin1
+        url: jdbc:postgresql://localhost:5432/fin
+        username: fin
+        password: fin
     jpa:
         database-platform: io.github.jhipster.domain.util.FixedPostgreSQL82Dialect
         database: POSTGRESQL
